--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 /.vs
 *.exe
+*.pdb
+*.iobj
+*.ipdb
+*.exp
 /brutales_vs/Release
 /brutales_vs/Debug
-/brutales_vs/x64/
-/brutales_vs/x64/
+/brutales_vs/x64/Debug
+/brutales_vs/x64/Release
+/brutales_vs/x64/*.lib
 /brutales_vs/x86/Release
 /brutales_vs/x86/Debug
+/brutales_vs/x86/*.lib
 /brutales_vs/Material
