--- a/brutales_vs/brutales_vs.vcxproj.filters
+++ b/brutales_vs/brutales_vs.vcxproj.filters
@@ -272,6 +272,9 @@
     <ClCompile Include="..\gl_engine\octree.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
+    <ClCompile Include="input_abstracts.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
