--- a/brutales_vs/brutales_vs.vcxproj.filters
+++ b/brutales_vs/brutales_vs.vcxproj.filters
@@ -275,6 +275,12 @@
     <ClCompile Include="input_abstracts.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gl_physics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\gl_engine\gl_physics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
