transition buffers experiments

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 /brutales_vs/Material
 /gl_engine/glm/out
 /brutales_vs/FullScreenRelease
+/BruteForceEngine/x64
+/BruteForceEngine/Release
+/BruteForceEngine/Debug
+/Debug
+/Release
