--- a/BruteForceEngine/BruteForceEngine.vcxproj
+++ b/BruteForceEngine/BruteForceEngine.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="VideoDriverDX12.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="EngineGpuCommands.h" />
     <ClInclude Include="EngineGpuFence.h" />
